Изменить вид navbar'a

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -18,20 +18,30 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header" id="header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <div class="container py-2">
-                <a class="navbar-brand" href="{% url 'index' %}">Market</a>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Market</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa-solid fa-plus fa-2xl"></i>
-                        </a>
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
                     </li>
                 </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <!-- Content -->
     <div class="container my-5">
