--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Market</a>
+            <a class="navbar-brand" href="/">Market</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
