Добавить возможность посмотреть все о продукте
 - Исправить путь к статическим файлам в корне проекта
 - Изменить высоту продукта на главной странице
 - Добавить шаблон для просматра конкретного продукта
 - Добавить представление просмотра продукта
 - Добавить стили к шаблону просмотра продукта
 - Добавить импорт в файле __init__ для product view
 - Добавить ссылку на продукт

--- a/src/products/templates/products/includes/card.html
+++ b/src/products/templates/products/includes/card.html
@@ -8,7 +8,7 @@
                 <div class="amount">Цена</div>
                 <div class="price">{{ product.price }}$</div>
             </div>
-            <a href="#" class="stretched-link"></a>
+            <a href="{% url 'product_detail' product.pk %}" class="stretched-link"></a>
         </div>
     </div>
 </div>
