--- a/src/products/templates/products/includes/card.html
+++ b/src/products/templates/products/includes/card.html
@@ -1,4 +1,4 @@
-<div class="col-12 col-md-6 col-lg-4 col-xxl-3">
+<div class="col-12 col-md-6 col-lg-4">
     <div class="card p-2 shadow-sm rounded-1">
         <img src="{{ product.image }}" class="card-img card-img-top" alt="product img">
         <div class="card-body">
