--- a/src/products/templates/products/update.html
+++ b/src/products/templates/products/update.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Create
+    Edit
 {% endblock %}
 
 {% block content %}
     <div class="row gy-5 justify-content-center">
         <div class="col-12 col-sm-8">
-            <form action="{% url 'product_create' %}" method="POST">
-                {% include 'products/includes/form.html' with button_text='Create' %}
+            <form action="{% url 'product_edit' pk %}" method="POST">
+                {% include 'products/includes/form.html' with button_text='Edit' %}
             </form>
         </div>
     </div>
