--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -45,7 +45,10 @@
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
-                                            <a href="{% url 'product_delete' product.pk %}" class="btn btn-danger">OK</a>
+                                            <form action="{% url 'product_delete' product.pk %}" method="POST">
+                                                {% csrf_token %}
+                                                <button type="submit" class="btn btn-danger">OK</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
