Добавить пагинацию на главную страницу

--- a/src/products/templates/products/index.html
+++ b/src/products/templates/products/index.html
@@ -28,6 +28,13 @@
                     {% include 'products/includes/card.html' %}
                 {% endfor %}
             </div>
+
+            <div class="row my-5">
+                <div class="d-flex justify-content-center">
+                    {% include 'products/includes/pagination.html' %}
+                </div>
+            </div>
         </div>
     </div>
+
 {% endblock %}
