--- a/src/products/templates/products/search.html
+++ b/src/products/templates/products/search.html
@@ -32,6 +32,12 @@
                     <h2 class="text-center">No result found</h2>
                 {% endif %}
             </div>
+
+            <div class="row my-5">
+                <div class="d-flex justify-content-center">
+                    {% include 'products/includes/pagination.html' %}
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
