--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'product_create' %}">Add Product</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cart' %}">Cart</a>
+                    </li>
                 </ul>
             </div>
         </div>
