Добавить корзину продуктов
Возможность смотреть что в корзине
Возможность добавлять в корзину
Возможность удалять с корзины

--- a/src/products/templates/products/includes/card.html
+++ b/src/products/templates/products/includes/card.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="card-footer p-0">
-            <form action="" method="POST">
+            <form action="{% url 'cart_add' product.pk %}" method="POST">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary rounded-0 w-100">Add to Cart</button>
             </form>
