--- a/src/cart/templates/cart/includes/table.html
+++ b/src/cart/templates/cart/includes/table.html
@@ -1,30 +1,55 @@
-<div class="col-12">
-    <table class="table">
+<div class="col-12 col-lg-9">
+    <table class="table table-light table-bordered table-hover">
         <thead>
             <tr>
                 <th scope="col">ID</th>
                 <th scope="col">Title</th>
                 <th scope="col">Category</th>
                 <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
+            {% for item in cart %}
+                <tr>
+                    <th scope="row">
+                        {{ item.product.pk }}
+                    </th>
+                    <td>
+                        {{ item.product.title }}
+                    </td>
+                    <td>
+                        {{ item.product.category }}
+                    </td>
+                    <td>
+                        {{ item.quantity }}
+                    </td>
+                    <td>
+                        {{ item.product.price }}$
+                    </td>
+                    <td>
+                        <form action="{% url 'cart_remove' item.pk %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-sm btn-danger">
+                                <i class="fa-solid fa-minus"></i>
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+            {% endfor %}
+
             <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
+                <td colspan="3">
+
+                </td>
+                <td>
+                    <strong>SUM</strong>
+                </td>
+                <td class="table-primary">
+                    {{ sum }}$
+                </td>
+                <td></td>
             </tr>
         </tbody>
     </table>
