--- a/src/cart/templates/cart/index.html
+++ b/src/cart/templates/cart/index.html
@@ -12,6 +12,9 @@
 {% block content %}
 
     <div class="row gy-5">
+        <div class="col-12 col-lg-3">
+
+        </div>
         {% include 'cart/includes/table.html' %}
     </div>
 
