--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,7 +36,9 @@
                         <a class="nav-link" href="{% url 'product_create' %}">Add Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cart' %}">Cart</a>
+                        <a class="nav-link" href="{% url 'cart' %}">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
                     </li>
                 </ul>
             </div>
